--- a/css/styles.css
+++ b/css/styles.css
@@ -209,9 +209,10 @@ body{
 .feature-icon-wrapper{
     width: 100%;
     background-color: #F5F4FA;
-    text-align: center;
-    padding-top: 25px;
-    padding-bottom: 25px;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 4px;
     margin-bottom: 30px;
 }
@@ -348,16 +349,23 @@ body{
     justify-content: center;
     column-gap: 30px;
 }
-
-.client-icon{
-    fill: var(--icon-color);
+.client-item{
+    width: 170px;
+    height: 92px;
+}
+.client-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
     border: 1px solid var(--icon-color);
     border-radius: 4px;
-    padding: 16px 32px;
+    fill: var(--icon-color);
 }
 
-.client-link:hover .client-icon,
-.client-link:focus .client-icon{
+.client-link:hover,
+.client-link:focus{
     fill: var(--color-hover-focus);
     border: 1px solid var(--color-hover-focus);
 } 
@@ -375,7 +383,6 @@ body{
 
 .footer-wrapper{
     display: flex;
-    column-gap: 70px;
     align-items: baseline;
 }
 
@@ -397,6 +404,10 @@ body{
 }
 .footer-contact {
     color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-social-wrapper{
+    margin-left: 70px;
 }
 
 .footer-social-text{
@@ -463,8 +474,12 @@ body{
    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.portfolio-item:hover,
-.portfolio-item:focus{
+.portfolio-link{
+    display: block;
+}
+
+.portfolio-link:hover,
+.portfolio-link:focus{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
